# lottery-offline-nextjs

./: .gitlab-ci-docker-windows.yml  .gitlab-ci-simple.yml  .gitlab-ci-windows.yml  .gitlab-ci.yml  .gitlab-ci.yml.backup.20250617_153232  build-windows.sh  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  release.yml  test-build.yml
activation-keygen/: ed25519-priv.pem  ed25519-pub.pem  index.js  keygen.sh  license-309284a6.txt  license-e1d8c00b.txt
data-encrypt/: data.csv  index.js  keygen.sh  rsa-priv.pem  rsa-pub.pem
docs/: docker-installation-fix.md  github-actions-guide.md  gitlab-cicd-guide.md  gitlab-windows-build-guide.md  linux-runner-setup-guide.md
lottery-offline-data-encrypt/: index.js
sample_file/: data.csv
scripts/: fix-docker-installation.sh  setup-gitlab-ci.sh  setup-linux-runner.sh  setup-runner-existing-docker.sh  setup-windows-build.sh  test-build.sh  test-pipeline.sh
src-tauri/: .license  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250614084346_create_users_table.sql
src-tauri/src/: lib.rs
src-tauri/src/modules/: activation.rs  database.rs  keys.rs  mod.rs  project.rs
src/app/: layout.tsx  page.tsx
src/app/(api)/activate/: query.ts  type.ts
src/app/(api)/project/: query.ts  type.ts
src/app/(api)/redeem/: query.ts  type.ts
src/app/(app)/: layout.tsx
src/app/activate/: page.tsx
src/components/: app-sidebar.tsx  nav-main.tsx  site-header.tsx
src/components/ui/: sidebar.tsx
src/lib/database/: database-connection.tsx  database-provider.tsx
src/lib/i18n/: i18n-provider.tsx  locale-switcher.tsx
src/types/: project.ts  redemptions.ts
(+7 files in other folders)
