[package]
name = "tauri-nextjs-template"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate"] }
log = "0.4"
tauri-plugin-log = "2.0.0-rc"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc", "clock"] }
ed25519-dalek = "2"
aes-gcm = "0.10"
aes = "0.8"
rsa = "0.9"
anyhow = "1"
hex = "0.4"
csv = "1.3"
once_cell = "1.19"
tauri-plugin-dialog = "2.2"
openssl = "0.10"
# 使用纯 Rust 加密库，完全兼容 OpenSSL 加密格式
# 但不依赖系统 OpenSSL，适合交叉编译


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
